# aderite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
dependencies/imgui/: CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/aderite_editor/: editor.cpp  editor.hpp
editor/src/aderite_editor/components/: asset_browser.cpp  asset_browser.hpp  asset_editor.cpp  asset_editor.hpp  base_component.hpp  component_utility.cpp  component_utility.hpp  entity_editor.cpp  entity_editor.hpp  modals.cpp  modals.hpp  property_editor.cpp  property_editor.hpp  scene_view.cpp  scene_view.hpp  toolbar.cpp  toolbar.hpp  utility.cpp  utility.hpp  viewport.cpp  viewport.hpp
editor/src/aderite_editor/core/: config.hpp  event_router.cpp  event_router.hpp  project.cpp  project.hpp  state.cpp  state.hpp
editor/src/aderite_editor/project/: project.hpp
editor/src/aderite_editor/utility/: file_dialog.cpp  file_dialog.hpp  utility.cpp  utility.hpp
editor/src/aderite_editor/windows/: windows_editor.cpp  windows_editor.hpp
editor/src/aderiteeditor/: Editor.cpp  Editor.hpp
editor/src/aderiteeditor/asset/: EditorMaterialType.cpp  EditorMaterialType.hpp  Forward.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp
editor/src/aderiteeditor/compiler/: Compiler.cpp  Compiler.hpp  Forward.hpp  GraphEvaluator.hpp  MaterialType.cpp  MaterialType.hpp  PipelineEvaluator.cpp  PipelineEvaluator.hpp  ScriptCompiler.cpp  ScriptCompiler.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderEvaluator.cpp  ShaderEvaluator.hpp  ShaderWriter.cpp  ShaderWriter.hpp
editor/src/aderiteeditor/extensions/: EditorAudioSource.cpp  EditorAudioSource.hpp  EditorEntity.cpp  EditorEntity.hpp  Forward.hpp
editor/src/aderiteeditor/node/: AddNode.cpp  AddNode.hpp  ConvertNode.cpp  ConvertNode.hpp  Forward.hpp  Graph.cpp  Graph.hpp  InputPin.cpp  InputPin.hpp  Link.cpp  Link.hpp  MaterialInputNode.cpp  MaterialInputNode.hpp  MaterialOutputNode.cpp  MaterialOutputNode.hpp  Node.cpp  Node.hpp  OutputPin.cpp  OutputPin.hpp  Sampler2DNode.cpp  Sampler2DNode.hpp
editor/src/aderiteeditor/resources/: EditorIcons.cpp  EditorIcons.hpp
editor/src/aderiteeditor/runtime/: EditorCameraOperation.cpp  EditorCameraOperation.hpp  EditorRenderOperation.cpp  EditorRenderOperation.hpp  EditorSerializables.hpp  EditorTargetOperation.cpp  EditorTargetOperation.hpp  EditorTypes.hpp  Instancers.hpp  OperationArray.cpp  OperationArray.hpp  Resolver.cpp  Resolver.hpp
editor/src/aderiteeditor/shared/: BaseComponent.hpp  Config.hpp  DragDrop.cpp  DragDrop.hpp  DragDropObject.hpp  EditorCamera.cpp  EditorCamera.hpp  Forward.hpp  IEventSink.hpp  Project.cpp  Project.hpp  SelectableObject.cpp  SelectableObject.hpp  Settings.cpp  Settings.hpp  State.cpp  State.hpp
editor/src/aderiteeditor/utility/: ImGui.cpp  ImGui.hpp  Macros.hpp  Utility.cpp  Utility.hpp
editor/src/aderiteeditor/vfs/: Directory.cpp  Directory.hpp  File.cpp  File.hpp  Forward.hpp  VFS.cpp  VFS.hpp
editor/src/aderiteeditor/windows/: AssetBrowser.cpp  AssetBrowser.hpp  FileDialog.cpp  FileDialog.hpp  Forward.hpp  Inspector.cpp  Inspector.hpp  Menubar.cpp  Menubar.hpp  Modals.cpp  Modals.hpp  NodeEditor.cpp  NodeEditor.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  SceneView.cpp  SceneView.hpp  SelectAudioModal.cpp  SelectAudioModal.hpp  SelectScriptModal.cpp  SelectScriptModal.hpp  StartupModal.cpp  StartupModal.hpp  Toolbar.cpp  Toolbar.hpp  WindowsEditor.cpp  WindowsEditor.hpp
runtime/: CMakeLists.txt  Doxyfile
runtime/src/aderite/: Aderite.cpp  Aderite.hpp  Config.hpp  Handles.hpp  aderite.cpp  aderite.hpp  aderitea.cpp  config.hpp
runtime/src/aderite/asset/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  AudioAsset.cpp  AudioAsset.hpp  ColliderListAsset.cpp  ColliderListAsset.hpp  Forward.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MaterialTypeAsset.cpp  MaterialTypeAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  MeshSource.cpp  MeshSource.hpp  PrefabAsset.cpp  PrefabAsset.hpp  ShaderAsset.cpp  ShaderAsset.hpp  TextureAsset.cpp  TextureAsset.hpp  TextureSource.cpp  TextureSource.hpp
runtime/src/aderite/audio/: AudioController.cpp  AudioController.hpp  AudioEvent.cpp  AudioEvent.hpp  AudioInstance.cpp  AudioInstance.hpp  AudioInstanceList.cpp  AudioInstanceList.hpp  AudioListener.cpp  AudioListener.hpp  AudioListenerData.cpp  AudioListenerData.hpp  AudioRequest.hpp  AudioSource.cpp  AudioSource.hpp  AudioSourceData.cpp  AudioSourceData.hpp  Bank.cpp  Bank.hpp  Forward.hpp
runtime/src/aderite/core/: aderite.cpp  aderite.hpp
runtime/src/aderite/input/: Forward.hpp  InputEnums.hpp  InputManager.cpp  InputManager.hpp
runtime/src/aderite/interfaces/: IEngineMiddleware.hpp  iaderite_editor.hpp  iframe_object.hpp  iloadable.hpp  irenderable.hpp  iserializable.hpp
runtime/src/aderite/io/: FileHandler.cpp  FileHandler.hpp  Forward.hpp  ILoadable.hpp  ISerializable.hpp  Instancer.hpp  Loader.cpp  Loader.hpp  LoaderPool.cpp  LoaderPool.hpp  PathResolver.hpp  RuntimeSerializables.hpp  SerializableAsset.cpp  SerializableAsset.hpp  SerializableObject.cpp  SerializableObject.hpp  Serializer.cpp  (+2 more)
scriptlib/: CMakeLists.txt  aderite_scriptlib.csproj
scriptlib/src/: Behavior.cs  Entity.cs  Input.cs  Log.cs  Quaternion.cs  Vector.cs
scriptlib/src/asset/: Material.cs  Mesh.cs  Prefab.cs
scriptlib/src/audio/: Audio.cs  AudioInstance.cs  AudioListener.cs  AudioSource.cs
scriptlib/src/components/: AudioSource.cs  DynamicActor.cs  MeshRenderer.cs  PhysicsActor.cs  StaticActor.cs  Transform.cs
scriptlib/src/core/: Engine.cs  Entity.cs  ScriptSystem.cs
scriptlib/src/engine/: Engine.cs
scriptlib/src/input/: Input.cs
scriptlib/src/math/: Quaternion.cs
scriptlib/src/physics/: CollisionEvent.cs  Geometry.cs  Physics.cs  RaycastHit.cs  RaycastResult.cs  Rigidbody.cs  TriggerEvent.cs
scriptlib/src/rendering/: Renderable.cs
scriptlib/src/scene/: Camera.cs  Entity.cs  GameObject.cs  Transform.cs
scriptlib/src/scripting/: ScriptedBehavior.cs
tests/: CMakeLists.txt
tests/src/: AssetTest.cpp  IoTest.cpp  SceneTest.cpp
(+1141 files in other folders)
